My scripture Journal app

--- a/RazorPagesMovie/Pages/Index.cshtml
+++ b/RazorPagesMovie/Pages/Index.cshtml
@@ -5,6 +5,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcometa</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to your Scripture Journal</h1>
+    <p>Read them right <a href="https://www.churchofjesuschrist.org/study/scriptures?lang=eng&platform=web" target="_blank">here</a>.</p>
+    <h3>Hear The words of the Profet</h3>
+    <a href="https://www.churchofjesuschrist.org/study/general-conference/2022/10/47nelson?lang=eng" target="_blank"><img class="homeImage" src="https://afirmacion.org/wp-content/uploads/2018/01/Nelson_satpm_april11.jpg" alt="The profet" /></a>
 </div>
