--- a/RazorPagesMovie/wwwroot/css/site.css
+++ b/RazorPagesMovie/wwwroot/css/site.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap');
+
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
@@ -14,5 +16,13 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background: rgb(255,255,255);
+    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(0,212,255,1) 100%);
+    font-family: 'Poppins', sans-serif;
 }
+
+.homeImage{
+    width: 70vw;
+}
+
